# shell

./: .gitignore  README.md  meson.build  meson_options.txt  pubspec.yaml
data/: build.h.in  expidus-shell.desktop.in  expidus-shell.sh.in
data/res/: shell.gresource.xml  style.css
data/schemas/settings/: com.expidus.shell.gschema.xml
include/: flutter.h
include/expidus-shell/: base-dashboard.h  base-desktop.h  desktop.h  overlay.h  shell.h  utils.h
include/expidus-shell/ui/: dashboard.h  desktop.h
lib/: application.dart  logind.vala  main.dart  settings.dart  theme.dart  user.dart
lib/ui/: dashboard.dart  desktop.dart
lib/widgets/: dashboard.dart  desktop.dart  launcher.dart  minidash.dart  overlay.dart  quickswitch.dart
linux/: CMakeLists.txt  my_application.cc
linux/include/expidus-shell/: desktop.h  flutter.h  global-messanger.h  overlay.h  panel.h  plugin.h
linux/res/: style.css
linux/schemas/: com.expidus.shell.gschema.xml
linux/src/: desktop.c  flutter.cc  global-messanger.c  main.c  overlay.c  panel.c  plugin-private.h  plugin.c
src/: base-dashboard.c  base-desktop.c  compositor.vala  desktop.c  desktop.vala  main.vala  monitor.vala  notifications.vala  overlay.c  panel.vala  plugin.c  shell.c  shell.vala  utils.c  utils.vala  window.vala  xfconf.vala  xsettings.vala
src/list-models/: apps.vala  notifications.vala
src/services/: blfilter.c
src/ui/: dashboard.c  desktop.c
src/widgets/: appboard.vala  apps.vala  base-panel.vala  dashboard.vala  desktop.vala  expidus-button.vala  indicators.vala  notifications.vala  panel.vala  side-panel.vala  startup-window.vala  status-area.vala  status-panel.vala
src/x11/: compositor.vala  window.vala
test/: widget_test.dart
vapi/: upower-glib.vapi  x11.vapi
web/: index.html  manifest.json
